# universitygrantsaiagent

./: .gitignore  LICENSE  README.md  data.md  ideas.md  plan.md  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
agents/: runner.py
app/: main.py
app/static/: index.html
data/: airtable-add-missing-columns-prompt.md  airtable-applications-template.csv  airtable-omni-prompt.md  applications.json
scholarship_grants/: airtable_client.py  airtable_schema.py  allocate.py  config.py  currency.py  export.py  grading.py  interview.py  models.py  seed_data.py  storage.py
scripts/: seed_demo.py
skills/: SCHOLARSHIP_ALLOCATION.md
submission/: video-script.md  writeup-draft.md  writeup-kaggle-2500.md
tests/: test_allocate.py  test_grading.py  test_interview.py
