[project]
name = "universitygrantsaiagent"
version = "1.0.0"
description = "University Scholarship Grants AI Agent — Kaggle capstone"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
agents = [
    "google-adk>=1.0.0",
    "litellm>=1.50.0",
]
dev = [
    "uvicorn>=0.32.0",
    "streamlit>=1.40.0",
    "pytest>=8.0.0",
]

[tool.vercel]
entrypoint = "app.vercel_app:app"
